--- a/vector-role/tasks/main.yml
+++ b/vector-role/tasks/main.yml
@@ -1,6 +1,15 @@
 ---
-- name: Download and install vector packages
+- name: Download and install vector packages for UBUNTU
   become: true
   ansible.builtin.apt:
-    deb: "https://packages.timber.io/vector/{{ vector_version }}/vector_{{ vector_version }}-1_amd64.deb"
+    deb: https://packages.timber.io/vector/{{ vector_version }}/vector_{{ vector_version }}-1_amd64.deb
   notify: Start Vector service
+  when: ansible_facts['distribution'] == "Ubuntu"
+
+# - name: Download and install vector packages for Centos8
+#   become: true
+#   ansible.builtin.yum:
+#     name: https://packages.timber.io/vector/{{ vector_version }}/vector-{{ vector_version }}-1.x86_64.rp
+#     state: present
+#   notify: Start Vector service
+#   when: ansible_facts['distribution'] == "CentOS"
