modified:   vector-role/molecule/default/Dockerfile 	new file:   vector-role/molecule/default/Dockerfile.2 	modified:   vector-role/molecule/default/molecule.yml 	modified:   vector-role/tasks/main.yml

--- a/vector-role/molecule/default/molecule.yml
+++ b/vector-role/molecule/default/molecule.yml
@@ -3,36 +3,15 @@ dependency:
   name: galaxy
 driver:
   name: docker
-platforms:
-  - name: ubuntu-20
-    hostname: ubuntu
-    image: mpaivabarbosa/molecule-systemd-ubuntu:20.04
-    volumes:
-      - /sys/fs/cgroup:/sys/fs/cgroup:ro
+platforms:  
+  - name: Ubuntu_latest
+    image: ubuntu:latest
+    dockerfile: Dockerfile
+    command: /lib/systemd/systemd
     privileged: true
-    pre_build_image: true
-    override_command: false
+    pre_build_image: false
 
-#   # - name: Centos8
-#   #   image: centos:8
-#   #   pre_build_image: true
-  # - name: Ubuntu-latest
-  #   image: ubuntu:latest
-  #   #command: "/lib/systemd/systemd"
-  #   dockerfile: Dockerfile
-  #   #volumes:
-  #   #  - /sys/fs/cgroup:/sys/fs/cgroup:ro
-  #   privileged: true
-  #   pre_build_image: true
-# - name: ubuntu-latest
-#   hostname: ubuntu
-#   image: mpaivabarbosa/molecule-systemd-ubuntu:latest
-#   volumes:
-#     - /sys/fs/cgroup:/sys/fs/cgroup:ro
-#   privileged: true
-#   pre_build_image: true
-#   override_command: false
-# provisioner:
-#   name: ansible
-# verifier:
-#   name: ansible
+  - name: C8
+    image: quay.io/centos/centos:stream8
+    command: /sbin/init
+    privileged: True
